changed phone number size

--- a/index.html
+++ b/index.html
@@ -175,7 +175,8 @@
         <p class="text-start mt-2">
           ▪ Getting prepared for the IELTS exam on the sixth of January 2024<br />
           ▪ Working on my
-          <a href="/publications.html#second-article" class="second-article">second article </a
+          <a href="/publications.html#second-article" class="second-article"
+            >second article </a
           >extracted from my master's thesis
         </p>
         <h3 class="text-center">
@@ -215,7 +216,7 @@
               >
               <br />
               <i class="fa fa-phone" aria-hidden="true"></i>
-              <span class="contact-me-content"> +989368125532</span>
+              <span class="contact-me-content phone-number">+989368125532</span>
             </div>
           </div>
         </div>
