--- a/index.html
+++ b/index.html
@@ -211,10 +211,10 @@
                 class="fa fa-envelope email-icon pe-1 pb-2 pt-3"
                 aria-hidden="true"
               ></i>
-              <span class="contact-me">ahmadfarkhondeh1997@gmail.com</span>
+              <span>ahmadfarkhondeh1997@gmail.com</span>
               <br />
               <i class="fa fa-phone" aria-hidden="true"></i>
-              <span class="contact-me">+989368125532</span>
+              <span class="phone-number">+989368125532</span>
             </div>
           </div>
         </div>
