--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                 class="fa fa-envelope email-icon pe-1 pb-2 pt-3"
                 aria-hidden="true"
               ></i>
-              <span>ahmadfarkhondeh1997@gmail.com</span>
+              ahmadfarkhondeh1997@gmail.com
               <br />
               <i class="fa fa-phone" aria-hidden="true"></i>
               +989368125532
