phone number size

--- a/index.html
+++ b/index.html
@@ -207,14 +207,17 @@
           <div class="col-lg-4"></div>
           <div class="col-lg-4 text-start">
             <div class="contact-me">
-              <i
+            <div>  <i
                 class="fa fa-envelope email-icon pe-1 pb-2 pt-3"
                 aria-hidden="true"
               ></i>
               ahmadfarkhondeh1997@gmail.com
+              </div>
               <br />
+              <div>
               <i class="fa fa-phone" aria-hidden="true"></i>
               +989368125532
+              </div>
             </div>
           </div>
         </div>
