--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                 />
               </div>
               <div class="contact-me mt-3 text-muted">
-                Ahmad Farkhondeh <br />Industrial Designer this is for check
+                Ahmad Farkhondeh <br />Industrial Designer
               </div>
             </div>
           </div>
