--- a/certificates.html
+++ b/certificates.html
@@ -63,7 +63,7 @@
             <ul class="navbar-nav">
               <li class="nav-item">
                 <a
-                  class="nav-link active"
+                  class="nav-link "
                   aria-current="page"
                   href="/index.html"
                   >Home</a
@@ -76,7 +76,7 @@
                 <a class="nav-link" href="/projects.html">Other Projects</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/certificates.html"
+                <a class="nav-link active" href="/certificates.html"
                   ><strong>Certificates</strong></a
                 >
               </li>
