--- a/gallery.html
+++ b/gallery.html
@@ -63,7 +63,7 @@
             <ul class="navbar-nav">
               <li class="nav-item">
                 <a
-                  class="nav-link active"
+                  class="nav-link "
                   aria-current="page"
                   href="/index.html"
                   >Home</a
@@ -79,7 +79,7 @@
                 <a class="nav-link" href="/certificates.html">Certificates</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/gallery.html"
+                <a class="nav-link active" href="/gallery.html"
                   ><strong>Gallery</strong></a
                 >
               </li>
