--- a/portfolio.html
+++ b/portfolio.html
@@ -65,15 +65,12 @@
           <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a
-                  class="nav-link active"
-                  aria-current="page"
-                  href="/index.html"
+                <a class="nav-link" aria-current="page" href="/index.html"
                   >Home</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/portfolio.html"
+                <a class="nav-link active" href="/portfolio.html"
                   ><strong>Portfolio</strong></a
                 >
               </li>
