--- a/projects.html
+++ b/projects.html
@@ -62,10 +62,7 @@
           <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a
-                  class="nav-link active"
-                  aria-current="page"
-                  href="/index.html"
+                <a class="nav-link" aria-current="page" href="/index.html"
                   >Home</a
                 >
               </li>
@@ -73,7 +70,7 @@
                 <a class="nav-link" href="/portfolio.html">Portfolio</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/projects.html"
+                <a class="nav-link active" href="/projects.html"
                   ><strong>Other Projects</strong></a
                 >
               </li>
