--- a/publications.html
+++ b/publications.html
@@ -62,10 +62,7 @@
           <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a
-                  class="nav-link active"
-                  aria-current="page"
-                  href="/index.html"
+                <a class="nav-link" aria-current="page" href="/index.html"
                   >Home</a
                 >
               </li>
@@ -82,7 +79,7 @@
                 <a class="nav-link" href="/gallery.html">Gallery</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/publications.html"
+                <a class="nav-link active" href="/publications.html"
                   ><strong>Publications</strong></a
                 >
               </li>
