added alternative text of images

--- a/certificates.html
+++ b/certificates.html
@@ -35,7 +35,11 @@
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
       crossorigin="anonymous"
     ></script>
-    <title>certificates</title>
+    <title>Certificates</title>
+    <meta
+      name="description"
+      content="This is academic website of Ahmad Farkhondeh, an industrial designer based in Iran"
+    />
   </head>
   <body>
     <div class="container">
@@ -62,10 +66,7 @@
           <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a
-                  class="nav-link "
-                  aria-current="page"
-                  href="/index.html"
+                <a class="nav-link" aria-current="page" href="/index.html"
                   >Home</a
                 >
               </li>
@@ -108,7 +109,7 @@
                 <img
                   class="card-img-top shadow-sm p-1 d-none d-md-block"
                   src="images/certificates/1-honors/01.jpg"
-                  alt="Card image cap"
+                  alt="National Master's Entrance Exam"
                 />
 
                 <div class="card-body">
@@ -128,7 +129,7 @@
                 <img
                   class="card-img-top shadow-sm p-1 d-none d-md-block"
                   src="images/certificates/1-honors/02.jpg"
-                  alt="Card image cap"
+                  alt="National Students' scientific Olympiad"
                 />
 
                 <div class="card-body">
@@ -155,7 +156,7 @@
                 <img
                   class="card-img-top shadow-sm p-1 d-none d-md-block"
                   src="images/certificates/2-workexperience & academic activity/01.jpg"
-                  alt="Card image cap"
+                  alt="Internship Program"
                 />
 
                 <div class="card-body">
@@ -174,7 +175,7 @@
                 <img
                   class="card-img-top shadow-sm p-1 d-none d-md-block"
                   src="images/certificates/2-workexperience & academic activity/02.jpg"
-                  alt="Card image cap"
+                  alt="Scientific Association of Industrial Design"
                 />
 
                 <div class="card-body">
@@ -204,7 +205,8 @@
                 <img
                   class="card-img-top shadow-sm p-1 d-none d-md-block"
                   src="images/certificates/3-exhibitions/01.jpg"
-                  alt="Card image cap"
+                  alt="exhibition of Design in Support of
+                    human wellbeing"
                 />
 
                 <div class="card-body">
@@ -224,7 +226,8 @@
                 <img
                   class="card-img-top shadow-sm p-1 d-none d-md-block"
                   src="images/certificates/3-exhibitions/02.jpg"
-                  alt="Card image cap"
+                  alt="exhibition of the Furniture and
+                    Interior Decoration"
                 />
 
                 <div class="card-body">
@@ -249,7 +252,7 @@
                 <img
                   class="card-img-top shadow-sm p-1 d-none d-md-block"
                   src="images/certificates/4-courses/01.jpg"
-                  alt="Card image cap"
+                  alt="Machine Learning Course"
                 />
 
                 <div class="card-body">
@@ -269,7 +272,7 @@
                 <img
                   class="card-img-top shadow-sm p-1 d-none d-md-block"
                   src="images/certificates/4-courses/02.jpg"
-                  alt="Card image cap"
+                  alt="CATIA software course"
                 />
 
                 <div class="card-body">
@@ -299,7 +302,7 @@
                 <img
                   class="card-img-top shadow-sm p-1 d-none d-md-block"
                   src="images/certificates/5-workshops/01.jpg"
-                  alt="Card image cap"
+                  alt="Polish Design Summer School"
                 />
 
                 <div class="card-body">
@@ -318,7 +321,7 @@
                 <img
                   class="card-img-top shadow-sm p-1 d-none d-md-block"
                   src="images/certificates/5-workshops/02.jpg"
-                  alt="Card image cap"
+                  alt="Sustainability JAM Workshop"
                 />
 
                 <div class="card-body">
@@ -344,7 +347,7 @@
                   <img
                     class="card-img-top shadow-sm p-1 d-none d-md-block"
                     src="images/certificates/6-sports/01.jpg"
-                    alt="Card image cap"
+                    alt="Sports Association"
                   />
 
                   <div class="card-body">
@@ -364,7 +367,7 @@
                   <img
                     class="card-img-top shadow-sm p-1 d-none d-md-block"
                     src="images/certificates/6-sports/02.jpg"
-                    alt="Card image cap"
+                    alt="Table Tennis Competition"
                   />
 
                   <div class="card-body">
@@ -384,7 +387,7 @@
                   <img
                     class="card-img-top shadow-sm p-1 d-none d-md-block"
                     src="images/certificates/6-sports/03.jpg"
-                    alt="Card image cap"
+                    alt="Table Tennis Competition"
                   />
 
                   <div class="card-body">
@@ -415,7 +418,7 @@
                 <img
                   class="card-img-top shadow-sm p-1 d-none d-md-block"
                   src="images/certificates/7-others or (participations)/01.jpg"
-                  alt="Card image cap"
+                  alt="International Handicrafts Festival"
                 />
 
                 <div class="card-body">
@@ -435,7 +438,8 @@
                 <img
                   class="card-img-top shadow-sm p-1 d-none d-md-block"
                   src="images/certificates/7-others or (participations)/02.jpg"
-                  alt="Card image cap"
+                  alt="Competition on the Role of Industrial Design
+                    in Handicrafts"
                 />
 
                 <div class="card-body">
@@ -457,7 +461,7 @@
                 <img
                   class="card-img-top shadow-sm p-1 d-none d-md-block"
                   src="images/certificates/6-sports/03.jpg"
-                  alt="Card image cap"
+                  alt="Table Tennis Competition"
                 />
 
                 <div class="card-body">
@@ -485,7 +489,7 @@
               <div>
                 <img
                   src="/images/profile-pic.png"
-                  alt=""
+                  alt="profile picture"
                   class="img-fluid d-inline p-2 m-0"
                   width="80px"
                 />
