--- a/gallery.html
+++ b/gallery.html
@@ -35,7 +35,7 @@
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
       crossorigin="anonymous"
     ></script>
-    <title>certificates</title>
+    <title>Gallery</title>
   </head>
   <body>
     <div class="container">
@@ -62,10 +62,7 @@
           <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a
-                  class="nav-link "
-                  aria-current="page"
-                  href="/index.html"
+                <a class="nav-link" aria-current="page" href="/index.html"
                   >Home</a
                 >
               </li>
@@ -108,7 +105,7 @@
                 <img
                   class="card-img-top shadow-sm p-1 img-fluid"
                   src="/images/gallery/1.My work (Aysu) was exhibited in the Design in Support of human wellbeing with regard to isolation and reduced social interactions exhibition at Isfahan city, Iran.jpg"
-                  alt="Card image cap"
+                  alt="Design in Support of human wellbeing exhibition"
                 />
               </a>
 
@@ -128,7 +125,7 @@
                 <img
                   class="card-img-top shadow-sm p-1 img-fluid"
                   src="images/gallery/2.Multi-diciplinary teamwork experience.jpg"
-                  alt="Card image cap"
+                  alt=" A multi-diciplinary teamwork experience"
                 />
               </a>
 
@@ -148,7 +145,7 @@
                 <img
                   class="card-img-top shadow-sm p-1 img-fluid"
                   src="images/gallery/3.My work (Balancer) was exhibited in the Polish embassy in Iran.jpg"
-                  alt="Card image cap"
+                  alt=" Balancer concept exhibited in the Polish embassy in Iran"
                 />
               </a>
 
@@ -167,7 +164,7 @@
                 <img
                   class="card-img-top shadow-sm p-1 img-fluid"
                   src="images/gallery/4.“Trails of Hope. The Odyssey of Freedom” exhibition in Iran.jpg"
-                  alt="Card image cap"
+                  alt="“Trails of Hope. The Odyssey of Freedom” exhibition in Iran"
                 />
               </a>
 
@@ -186,7 +183,7 @@
                 <img
                   class="card-img-top shadow-sm p-1 img-fluid"
                   src="/images/gallery/5.Library.jpg"
-                  alt="Card image cap"
+                  alt="library"
                 />
               </a>
 
@@ -205,7 +202,7 @@
                 <img
                   class="card-img-top shadow-sm p-1 img-fluid"
                   src="images/gallery/6.The graduation ceremony for Bachelor's degree, Art University of Isfahan, Isfahan, Iran.jpg"
-                  alt="Card image cap"
+                  alt="Graduation ceremony"
                 />
               </a>
 
@@ -224,7 +221,7 @@
                 <img
                   class="card-img-top shadow-sm p-1 img-fluid"
                   src="images/gallery/7.co-working office.jpg"
-                  alt="Card image cap"
+                  alt="Co-working office"
                 />
               </a>
 
@@ -241,7 +238,7 @@
                 <img
                   class="card-img-top shadow-sm p-1 img-fluid"
                   src="images/gallery/8.Ranked second in the fashion design competition, Isfahan, Iran.jpg"
-                  alt="Card image cap"
+                  alt="fashion design competition"
                 />
               </a>
 
@@ -261,7 +258,7 @@
                 <img
                   class="card-img-top shadow-sm p-1 img-fluid"
                   src="/images/gallery/9.Sustainability Jam workshop.JPG"
-                  alt="Card image cap"
+                  alt="Sustainability Jam workshop"
                 />
               </a>
 
@@ -278,7 +275,7 @@
                 <img
                   class="card-img-top shadow-sm p-1 img-fluid"
                   src="images/gallery/10.Weekly meeting of sports association in Isfahan Art University, Isfahan, Iran.jpg"
-                  alt="Card image cap"
+                  alt="sports association"
                 />
               </a>
 
@@ -297,7 +294,7 @@
                 <img
                   class="card-img-top shadow-sm p-1 img-fluid"
                   src="/images/gallery/11.Digital painting workshop.jpg"
-                  alt="Card image cap"
+                  alt="Digital painting workshop"
                 />
               </a>
 
@@ -315,7 +312,7 @@
                 <img
                   class="card-img-top shadow-sm p-1 img-fluid"
                   src="/images/gallery/13.Isfahan Art University Sports Association camp, Isfahan, Iran.jpg"
-                  alt="Card image cap"
+                  alt="Sports Association camp"
                 />
               </a>
 
@@ -335,7 +332,7 @@
                 <img
                   class="card-img-top shadow-sm p-1 img-fluid"
                   src="images/gallery/12.Do Smart Workshop 2022.jpg"
-                  alt="Card image cap"
+                  alt="Do Smart Workshop"
                 />
               </a>
 
@@ -351,7 +348,7 @@
                 <img
                   class="card-img-top shadow-sm p-1 img-fluid"
                   src="/images/gallery/17.Sculpture workshop.jpg"
-                  alt="Card image cap"
+                  alt="Sculpture workshop"
                 />
               </a>
 
@@ -368,7 +365,7 @@
                 <img
                   class="card-img-top shadow-sm p-1 img-fluid"
                   src="/images/gallery/15.Ranked first in the ping pong tournament at Art University of Isfahan, Isfahan, Iran 2017.jpg"
-                  alt="Card image cap"
+                  alt="ping pong tournament"
                 />
               </a>
 
@@ -388,7 +385,7 @@
                 <img
                   class="card-img-top shadow-sm p-1 img-fluid"
                   src="images/gallery/16.Ranked first in the ping pong tournament at Art University of Isfahan, Isfahan, Iran 2016.jpg"
-                  alt="Card image cap"
+                  alt=" ping pong tournament"
                 />
               </a>
 
@@ -409,7 +406,7 @@
                 <img
                   class="card-img-top shadow-sm p-1 img-fluid"
                   src="/images/gallery/14.Metalworking.jpg"
-                  alt="Card image cap"
+                  alt="Metalworking"
                 />
               </a>
 
@@ -427,7 +424,7 @@
                 <img
                   class="card-img-top shadow-sm p-1 img-fluid"
                   src="/images/gallery/18.Working with polyester resin and types of putty.jpg"
-                  alt="Card image cap"
+                  alt=" Working with polyester resin and types of putty"
                 />
               </a>
 
@@ -445,7 +442,7 @@
                 <img
                   class="card-img-top shadow-sm p-1 img-fluid"
                   src="/images/gallery/19.Woodworking workshop.jpg "
-                  alt="Card image cap"
+                  alt="Woodworking workshop"
                 />
               </a>
 
@@ -460,7 +457,7 @@
                 <img
                   class="card-img-top shadow-sm p-1 img-fluid"
                   src="images/gallery/20.Playing Billiard.jpg"
-                  alt="Card image cap"
+                  alt="Playing Billiard"
                 />
               </a>
 
@@ -480,7 +477,7 @@
                 <img
                   class="card-img-top shadow-sm p-1 img-fluid"
                   src="/images/gallery/23.2rd professional meeting and national competition, the role of industrial design in handicrafts.jpg"
-                  alt="Card image cap"
+                  alt="the role of industrial design in handicrafts"
                 />
               </a>
 
@@ -500,7 +497,7 @@
                 <img
                   class="card-img-top shadow-sm p-1 img-fluid"
                   src="/images/gallery/22.3rd professional meeting and national competition, the role of industrial design in handicrafts.jpg"
-                  alt="Card image cap"
+                  alt=" 3rd professional meeting and national competition"
                 />
               </a>
 
@@ -521,7 +518,7 @@
                 <img
                   class="card-img-top shadow-sm p-1 img-fluid"
                   src="/images/gallery/21.My trip with my friends to the south coast of Iran.jpg"
-                  alt="Card image cap"
+                  alt="My trip to the south coast of Iran"
                 />
               </a>
 
@@ -558,7 +555,7 @@
               <div>
                 <img
                   src="/images/profile-pic.png"
-                  alt=""
+                  alt="profile picture"
                   class="img-fluid d-inline p-2 m-0"
                   width="80px"
                 />
