--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
       crossorigin="anonymous"
     ></script>
-    <title>Portfolio-Ahmad-Farkhondeh2024</title>
+    <title>Ahmad Farkhondeh-academic websit-2024</title>
     <style>
       .master {
         background-image: url(images/Tehran-logo7.png);
@@ -194,7 +194,7 @@
               <div>
                 <img
                   src="/images/profile-pic.png"
-                  alt=""
+                  alt="profile picture"
                   class="img-fluid d-inline p-2 m-0"
                   width="80px"
                 />
