--- a/portfolio.html
+++ b/portfolio.html
@@ -132,46 +132,46 @@
       <img
         src="images/portfolio/01.jpg"
         width="80%"
-        alt="01"
+        alt="01.bnm-project"
         class="img-fluid mb-2"
       />
       <img
         src="images/portfolio/02.jpg"
         width="80%"
-        alt="02"
+        alt="02.bnm-project"
         class="img-fluid mb-2"
       />
 
       <img
         src="images/portfolio/03.jpg"
         width="80%"
-        alt="03"
+        alt="03.bnm-project"
         class="img-fluid mb-2"
       />
 
       <img
         src="images/portfolio/04.jpg"
         width="80%"
-        alt="04"
+        alt="04.bnm-project"
         class="img-fluid mb-2"
         id="bnm-project"
       />
       <img
         src="images/portfolio/05.jpg"
         width="80%"
-        alt=""
+        alt="bnm-project"
         class="img-fluid mb-2"
       />
       <img
         src="images/portfolio/06.jpg"
         width="80%"
-        alt=""
+        alt="bnm-project"
         class="img-fluid mb-2"
       />
       <img
         src="images/portfolio/07.jpg"
         width="80%"
-        alt=""
+        alt="bnm-project"
         class="img-fluid mb-2"
       />
       <video
@@ -182,86 +182,86 @@
       <img
         src="images/portfolio/08.jpg"
         width="80%"
-        alt=""
+        alt="bnm-project"
         class="img-fluid mb-2"
       />
       <img
         src="images/portfolio/09.jpg"
         width="80%"
-        alt=""
+        alt="bnm-project"
         class="img-fluid mb-2"
       />
       <img
         src="images/portfolio/10.jpg"
         width="80%"
-        alt=""
+        alt="bnm-project"
         class="img-fluid mb-2"
       />
       <img
         src="images/portfolio/11.jpg"
         width="80%"
-        alt=""
+        alt="bnm-project"
         class="img-fluid mb-2"
       />
       <img
         src="images/portfolio/12.jpg"
         width="80%"
-        alt=""
+        alt="bnm project"
         class="img-fluid mb-2"
         id="alfred-project"
       />
       <img
         src="images/portfolio/13.jpg"
         width="80%"
-        alt=""
+        alt="alfred project"
         class="img-fluid mb-2"
       />
       <img
         src="images/portfolio/14.jpg"
         width="80%"
-        alt=""
+        alt="alfred project"
         class="img-fluid mb-2"
       />
       <img
         src="images/portfolio/15.jpg"
         width="80%"
-        alt=""
+        alt="alfred project"
         class="img-fluid mb-2"
       />
       <img
         src="images/portfolio/16.jpg"
         width="80%"
-        alt=""
+        alt="alfred project"
         class="img-fluid mb-2"
       />
       <img
         src="images/portfolio/17.jpg"
         width="80%"
-        alt=""
+        alt="alfred project"
         class="img-fluid mb-2"
       />
       <img
         src="images/portfolio/18.jpg"
         width="80%"
-        alt=""
+        alt="alfred project"
         class="img-fluid mb-2"
       />
       <img
         src="images/portfolio/19.jpg"
         width="80%"
-        alt=""
+        alt="alfred project"
         class="img-fluid mb-2"
       />
       <img
         src="images/portfolio/20.jpg"
         width="80%"
-        alt=""
+        alt="alfred project"
         class="img-fluid mb-2"
       />
       <img
         src="images/portfolio/21.jpg"
         width="80%"
-        alt=""
+        alt="alfred project"
         class="img-fluid mb-2"
       />
       <video
@@ -272,64 +272,64 @@
       <img
         src="images/portfolio/22.jpg"
         width="80%"
-        alt=""
+        alt="alfred project"
         class="img-fluid mb-2"
         id="solin-project"
       />
       <img
         src="images/portfolio/23.jpg"
         width="80%"
-        alt=""
+        alt="solin project"
         class="img-fluid mb-2"
       />
       <img
         src="images/portfolio/24.jpg"
         width="80%"
-        alt=""
+        alt="solin project"
         class="img-fluid mb-2"
       />
       <img
         src="images/portfolio/25.jpg"
         width="80%"
-        alt=""
+        alt="solin project"
         class="img-fluid mb-2"
       />
       <img
         src="images/portfolio/26.jpg"
         width="80%"
-        alt=""
+        alt="bnm project"
         class="img-fluid mb-2"
-        id="aysu-project"
+        id="solin project"
       />
       <img
         src="images/portfolio/27.jpg"
         width="80%"
-        alt=""
+        alt="solin project"
         class="img-fluid mb-2"
       />
       <img
         src="images/portfolio/28.jpg"
         width="80%"
-        alt=""
+        alt="solin project"
         class="img-fluid mb-2"
       />
       <img
         src="images/portfolio/29.jpg"
         width="80%"
-        alt=""
+        alt="solin project"
         class="img-fluid mb-2"
       />
       <img
         src="images/portfolio/30.jpg"
         width="80%"
-        alt=""
+        alt="solin project"
         class="img-fluid mb-2"
       />
 
       <img
         src="images/portfolio/31.jpg"
         width="80%"
-        alt=""
+        alt="solin project"
         class="img-fluid mb-2"
       />
     </div>
@@ -347,7 +347,7 @@
               <div>
                 <img
                   src="/images/profile-pic.png"
-                  alt=""
+                  alt="profile picture"
                   class="img-fluid d-inline p-2 m-0"
                   width="80px"
                 />
