--- a/projects.html
+++ b/projects.html
@@ -152,8 +152,7 @@
               <a href="images/Other-Projects/01-Orsey/04.jpg">
                 <img
                   src="images/Other-Projects/01-Orsey/04.jpg"
-                  class=""
-                  alt="..."
+                  alt="orsey project"
                   width="70%"
                 />
               </a>
@@ -165,8 +164,7 @@
               >
                 <img
                   src="images/Other-Projects/01-Orsey/02.jpg"
-                  class=""
-                  alt="..."
+                  alt="orsey project"
                   width="70%"
                 />
               </a>
@@ -178,8 +176,7 @@
               >
                 <img
                   src="images/Other-Projects/01-Orsey/01.jpg"
-                  class=""
-                  alt="..."
+                  alt="orsey project"
                   width="70%"
                 />
               </a>
@@ -188,8 +185,7 @@
               <a href="images/Other-Projects/01-Orsey/03.jpg">
                 <img
                   src="images/Other-Projects/01-Orsey/03.jpg"
-                  class=""
-                  alt="..."
+                  alt="orsey project"
                   width="70%"
                 />
               </a>
@@ -198,8 +194,7 @@
               <a href="images/Other-Projects/01-Orsey/05.jpg">
                 <img
                   src="images/Other-Projects/01-Orsey/05.jpg"
-                  class=""
-                  alt="..."
+                  alt="orsey project"
                   width="70%"
                 />
               </a>
@@ -240,7 +235,7 @@
           <a href="/images/Other-Projects/02-Environmental Design/01.jpg">
             <img
               src="/images/Other-Projects/02-Environmental Design/01.jpg"
-              alt=""
+              alt="Environmental Design project"
               class="img-fluid p-1"
               width="100%"
             />
@@ -250,7 +245,7 @@
           <a href="/images/Other-Projects/02-Environmental Design/02.jpg">
             <img
               src="images/Other-Projects/02-Environmental Design/02.jpg"
-              alt=""
+              alt="Environmental Design project"
               class="img-fluid p-1"
               width="100%"
           /></a>
@@ -281,7 +276,7 @@
           <a href="/images/Other-Projects/03-Morfius/01.jpg">
             <img
               src="/images/Other-Projects/03-Morfius/01.jpg"
-              alt=""
+              alt="Morfius project"
               class="img-fluid p-1"
               width="100%"
             />
@@ -291,7 +286,7 @@
           <a href="/images/Other-Projects/03-Morfius/02.jpg">
             <img
               src="/images/Other-Projects/03-Morfius/02.jpg"
-              alt=""
+              alt="Morfius project"
               class="img-fluid p-1"
               width="100%"
           /></a>
@@ -361,8 +356,7 @@
               >
                 <img
                   src="/images/Other-Projects/04-Packaging Project/01.jpg"
-                  class=" "
-                  alt="..."
+                  alt="Packaging Project"
                   width="70%"
                 />
               </a>
@@ -371,8 +365,7 @@
               <a href="/images/Other-Projects/04-Packaging Project/02.jpg">
                 <img
                   src="/images/Other-Projects/04-Packaging Project/02.jpg"
-                  class=""
-                  alt="..."
+                  alt="Packaging Project"
                   width="70%"
                 />
               </a>
@@ -381,8 +374,7 @@
               <a href="/images/Other-Projects/04-Packaging Project/03.jpg">
                 <img
                   src="/images/Other-Projects/04-Packaging Project/03.jpg"
-                  class=""
-                  alt="..."
+                  alt="Packaging Project"
                   width="70%"
                 />
               </a>
@@ -391,8 +383,7 @@
               <a href="/images/Other-Projects/04-Packaging Project/04.jpg">
                 <img
                   src="/images/Other-Projects/04-Packaging Project/04.jpg"
-                  class=""
-                  alt="..."
+                  alt="Packaging Project"
                   width="70%"
                 />
               </a>
@@ -401,8 +392,7 @@
               <a href="images/Other-Projects/04-Packaging Project/05.jpg">
                 <img
                   src="/images/Other-Projects/04-Packaging Project/05.jpg"
-                  class=""
-                  alt="..."
+                  alt="Packaging Project"
                   width="70%"
                 />
               </a>
@@ -440,7 +430,7 @@
       <a href="/images/Other-Projects/05-Dialux Project/01.jpg">
         <img
           src="/images/Other-Projects/05-Dialux Project/01.jpg"
-          alt=""
+          alt="Dialux Project"
           class="img-fluid pb-5"
           width="40%"
         />
@@ -454,7 +444,7 @@
               <div>
                 <img
                   src="/images/profile-pic.png"
-                  alt=""
+                  alt="profile picture"
                   class="img-fluid d-inline p-2 m-0"
                   width="80px"
                 />
