--- a/publications.html
+++ b/publications.html
@@ -35,7 +35,7 @@
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
       crossorigin="anonymous"
     ></script>
-    <title>certificates</title>
+    <title>Publications</title>
   </head>
   <body>
     <div class="container">
@@ -286,7 +286,7 @@
               <div>
                 <img
                   src="/images/profile-pic.png"
-                  alt=""
+                  alt="profile picture"
                   class="img-fluid d-inline p-2 m-0"
                   width="80px"
                 />
