made the site SEO friendly

--- a/certificates.html
+++ b/certificates.html
@@ -522,6 +522,7 @@
           <a
             href="https://www.linkedin.com/in/ahmad-farkhondeh/"
             target="_blank"
+            title="Linkedin"
             ><i class="fa-brands fa-linkedin m-2" aria-hidden="true"></i
           ></a>
         </div>
@@ -529,6 +530,7 @@
           <a
             href="https://www.researchgate.net/profile/Ahmad-Farkhondeh-2"
             target="_blank"
+            title="Researchgate"
           >
             <i class="fa-brands fa-researchgate m-2"></i
           ></a>
@@ -538,6 +540,7 @@
             href="https://orcid.org/0009-0007-1695-1563
 "
             target="_blank"
+            title="Orcid"
           >
             <i class="fa-brands fa-orcid m-2"></i
           ></a>
