--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
           >extracted from my master's thesis
         </p>
         <h3 class="text-center">
-          <a href="images/cv.pdf" class="btn btn-customized mt-5"
+          <a href="images/cv.pdf" class="btn btn-customized mt-5" title="CV"
             ><strong>Download the complete CV</strong></a
           >
         </h3>
@@ -227,7 +227,7 @@
       <div class="social-links d-flex justify-content-center">
         <div>
           <a
-            href="https://www.linkedin.com/in/ahmad-farkhondeh/"
+            href="https://www.linkedin.com/in/ahmad-farkhondeh/" title="Linkedin"
             target="_blank"
             ><i class="fa-brands fa-linkedin m-2" aria-hidden="true"></i
           ></a>
@@ -235,7 +235,7 @@
         <div>
           <a
             href="https://www.researchgate.net/profile/Ahmad-Farkhondeh-2"
-            target="_blank"
+            target="_blank" title="researchgate"
           >
             <i class="fa-brands fa-researchgate m-2"></i
           ></a>
@@ -244,7 +244,7 @@
           <a
             href="https://orcid.org/0009-0007-1695-1563
 "
-            target="_blank"
+            target="_blank" title="orcid"
           >
             <i class="fa-brands fa-orcid m-2"></i
           ></a>
