--- a/portfolio.html
+++ b/portfolio.html
@@ -380,6 +380,7 @@
           <a
             href="https://www.linkedin.com/in/ahmad-farkhondeh/"
             target="_blank"
+            title="linkedin"
             ><i class="fa-brands fa-linkedin m-2" aria-hidden="true"></i
           ></a>
         </div>
@@ -387,6 +388,7 @@
           <a
             href="https://www.researchgate.net/profile/Ahmad-Farkhondeh-2"
             target="_blank"
+            title="researchgate"
           >
             <i class="fa-brands fa-researchgate m-2"></i
           ></a>
@@ -396,6 +398,7 @@
             href="https://orcid.org/0009-0007-1695-1563
 "
             target="_blank"
+            title="orcid"
           >
             <i class="fa-brands fa-orcid m-2"></i
           ></a>
