--- a/gallery.html
+++ b/gallery.html
@@ -588,6 +588,7 @@
           <a
             href="https://www.linkedin.com/in/ahmad-farkhondeh/"
             target="_blank"
+            title="Linkedin"
             ><i class="fa-brands fa-linkedin m-2" aria-hidden="true"></i
           ></a>
         </div>
@@ -595,6 +596,7 @@
           <a
             href="https://www.researchgate.net/profile/Ahmad-Farkhondeh-2"
             target="_blank"
+            title="Researchgate"
           >
             <i class="fa-brands fa-researchgate m-2"></i
           ></a>
@@ -604,6 +606,7 @@
             href="https://orcid.org/0009-0007-1695-1563
 "
             target="_blank"
+            title="Orcid"
           >
             <i class="fa-brands fa-orcid m-2"></i
           ></a>
