--- a/projects.html
+++ b/projects.html
@@ -477,6 +477,7 @@
           <a
             href="https://www.linkedin.com/in/ahmad-farkhondeh/"
             target="_blank"
+            title="Linkedin"
             ><i class="fa-brands fa-linkedin m-2" aria-hidden="true"></i
           ></a>
         </div>
@@ -484,6 +485,7 @@
           <a
             href="https://www.researchgate.net/profile/Ahmad-Farkhondeh-2"
             target="_blank"
+            title="Researchgate"
           >
             <i class="fa-brands fa-researchgate m-2"></i
           ></a>
@@ -493,6 +495,7 @@
             href="https://orcid.org/0009-0007-1695-1563
 "
             target="_blank"
+            title="Orcid"
           >
             <i class="fa-brands fa-orcid m-2"></i
           ></a>
