--- a/publications.html
+++ b/publications.html
@@ -95,7 +95,7 @@
     </div>
 
     <div class="wrapper text-center pt-3 pb-3">
-      <div class="ms-5">
+      <div class="m-5">
         <h2>
           The Space Syntax of urban parks; identifying areas inducing sense of
           fear of crime in visitors (a case study of Tappeh-Bashi Park in
@@ -188,7 +188,7 @@
       </div>
     </div>
     <div class="wrapper text-center pt-3 pb-3">
-      <div class="ms-5">
+      <div class="m-5">
         <h2>A framework of urban furniture design for crime reduction</h2>
         <p>
           <strong>Authors:</strong> Ali Faraji,
@@ -261,7 +261,7 @@
       </div>
     </div>
     <div class="wrapper text-center pt-3 pb-3" id="second-article">
-      <div class="ms-5">
+      <div class="m-5">
         <h2>
           Evaluating the Impact of Citizen's Sense of Attachment and
           Satisfaction of Tappeh-Bashi Park on their Sense of Social Security
