--- a/publications.html
+++ b/publications.html
@@ -94,8 +94,8 @@
       </nav>
     </div>
 
-    <div class="wrapper text-center pt-3 pb-3">
-      <div class="m-5">
+    <div class="publications-wrapper text-center">
+      <div>
         <h2>
           The Space Syntax of urban parks; identifying areas inducing sense of
           fear of crime in visitors (a case study of Tappeh-Bashi Park in
@@ -187,8 +187,8 @@
         </div>
       </div>
     </div>
-    <div class="wrapper text-center pt-3 pb-3">
-      <div class="m-5">
+    <div class="publications-wrapper text-center">
+      <div>
         <h2>A framework of urban furniture design for crime reduction</h2>
         <p>
           <strong>Authors:</strong> Ali Faraji,
@@ -260,8 +260,8 @@
         </div>
       </div>
     </div>
-    <div class="wrapper text-center pt-3 pb-3" id="second-article">
-      <div class="m-5">
+    <div class="publications-wrapper text-center mb-5" id="second-article">
+      <div>
         <h2>
           Evaluating the Impact of Citizen's Sense of Attachment and
           Satisfaction of Tappeh-Bashi Park on their Sense of Social Security
